--- a/.github/workflows/Update_Image.yml
+++ b/.github/workflows/Update_Image.yml
@@ -2,7 +2,7 @@ name: update-price-image
 on:
   push:
   schedule:
-  - cron: "*/3 * * * *"
+  - cron: "0 0 * * *"
 
       
 jobs:
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Fetch latest data
       run: |-
-        curl ${{ secrets.image_url }} > image/cover.png
+        curl ${{ secrets.IMAGE_URL }} > image/cover.png
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
